<resources>
    <string name="app_id">wxa9abf55c581d97cf</string>
    <string name="umeng_id">5b7d05b58f4a9d78de000025</string>
    <string name="exchange_key">21fa7faea69b44e7bc1d0dc054aa923a</string>
    <string name="exchange_secret">7b7d8bb0047ad94db11eeaec4b7752f8e5c471728f5ff761263077468ff5fb2f</string>
    <string name="app_name">币付钱包</string>
    <string name="save_app_version_name">bipaywallet</string>
    <string name="home_tab_wallet">钱包</string>
    <string name="home_tab_market">行情</string>
    <string name="home_tab_news">快讯</string>
    <string name="home_tab_set">设置</string>
    <string name="unknown_error">未知错误</string>
    <string name="no_network">网络异常，请检查网络</string>
    <string name="parse_error">解析异常</string>
    <string name="time_out">请求超时</string>
    <string name="no_data">暂无数据</string>
    <string name="Incomplete_information">填写信息不完整</string>
    <string name="password_two_warn">两次输入密码不一致</string>
    <string name="wallet_name_repeat_warn">已有此钱包名称</string>
    <string name="wallet_exist_warn">此钱包已存在</string>
    <string name="linkman_name_repeat_warn">已有此联系人名称</string>
    <string name="password_length_tip">密码必须为6位数字</string>
    <string name="password_confirm_error">密码验证错误</string>
    <string name="confirm_error">验证错误</string>
    <string name="memory_words_warn">助记词不合法</string>
    <string name="privkey_warn">私钥不合法</string>
    <string name="transfer_pay_warn">转账金额必须大于0</string>
    <string name="fee_warn">手续费必须大于0</string>
    <string name="money_not_enough">余额不足</string>
    <string name="fee_not_enough">手续费不足</string>
    <string name="address_not_verify">转账地址不合法</string>
    <string name="address_not_allow">转账地址不能是自己地址</string>
    <string name="zxing_fail">解析失败</string>
    <string name="zxing_coin_error">该地址非当前资产地址</string>
    <string name="zxing_add_coin_first">请先添加该资产</string>
    <string name="check_box_selected_first">请先同意服务及隐私条款</string>
    <string name="installed_error">找不到该应用,请安装后重试!</string>
    <string name="mobile_error">手机号格式不正确</string>
    <string name="email_error">邮箱格式不正确</string>
    <string name="camera_permission">权限不可用，请开启相机权限</string>
    <string name="storage_permission">权限不可用，请开启存储权限</string>
    <string name="warm_prompt">温馨提示</string>
    <string name="exit_again">再按一次退出</string>
    <string name="help">帮助</string>
    <string name="english">English</string>
    <string name="chinese">中文</string>
    <string name="share">分享</string>
    <string name="save">保存</string>
    <string name="more">更多</string>
    <string name="password_change_success">修改成功</string>
    <string name="news_up">收起</string>
    <string name="news_down">展开</string>
    <string name="record_wait_confirm">确认中</string>
    <string name="record_finish">已到账</string>
    <string name="copy_success">已复制到剪贴板!</string>
    <string name="save_success">保存成功</string>
    <string name="delete_success">删除成功</string>
    <string name="trade_success">交易成功</string>
    <string name="trade_underway">您可能有一笔未完成的交易</string>
    <string name="can_not_search">暂不支持查询</string>
    <string name="share_weixin">微信好友</string>
    <string name="share_pyq">朋友圈</string>
    <string name="fragment_one_pop_all_money">总资产</string>
    <string name="wallet_pop_scan">扫一扫</string>
    <string name="fragment_one_pop_cjqb">创建钱包</string>
    <string name="fragment_one_pop_drqb">导入钱包</string>
    <string name="fragment_one_pop_tjzc">添加资产</string>
    <string name="fragment_two_zcmc">资产名称</string>
    <string name="fragment_two_zxj">最新价</string>
    <string name="fragment_two_zdf">涨跌幅</string>
    <string name="fragment_four_man">联系人</string>
    <string name="fragment_four_record">交易记录</string>
    <string name="fragment_four_wallet">钱包管理</string>
    <string name="fragment_four_message">消息中心</string>
    <string name="fragment_four_setting">系统设置</string>
    <string name="fragment_four_help">帮助中心</string>
    <string name="fragment_four_aboutus">关于我们</string>
    <string name="fragment_four_version">版本更新</string>
    <string name="fragment_four_coin">货币设置</string>
    <string name="fragment_four_language">语言设置</string>
    <string name="fragment_four_share_app">分享APP</string>
    <string name="help_center">帮助中心</string>
    <string name="activity_lead_next">立即体验</string>
    <string name="activity_add_market">添加行情</string>
    <string name="activity_add_market_search">搜索</string>
    <string name="activity_market_details">价格行情</string>
    <string name="activity_wallet_details_qbmc">钱包名称</string>
    <string name="activity_wallet_details_tip">密码提示</string>
    <string name="activity_wallet_details_xgmm">修改密码</string>
    <string name="activity_wallet_details_dcsy">导出私钥</string>
    <string name="activity_wallet_details_scqb">删除钱包</string>
    <string name="activity_wallet_details_key">私钥</string>
    <string name="activity_wallet_details_main_key">主私钥</string>
    <string name="activity_update_password_title">修改密码</string>
    <string name="activity_update_password_hint1">请输入原密码</string>
    <string name="activity_update_password_hint2">请输入新密码</string>
    <string name="activity_update_password_hint3">重新确认密码</string>
    <string name="activity_update_password_qrxg">确认修改</string>
    <string name="activity_create_wallet_name">钱包名称</string>
    <string name="activity_create_wallet_pwd">密码</string>
    <string name="activity_create_wallet_confirm_pwd">确认密码</string>
    <string name="activity_create_wallet_tag">密码提示信息(非必填)</string>
    <string name="activity_backups_wallet_title">备份钱包</string>
    <string name="activity_backups_wallet_txt1">创建成功</string>
    <string name="activity_backups_wallet_txt2">最后一步：立即备份你的钱包</string>
    <string name="activity_backups_wallet_txt3">备份钱包：导出[助记词]并抄写到安全的地方，
        千万不要保存在网络上，然后尝试转入，转出小额资产开始使用</string>
    <string name="activity_memory_words_title">备份助记词</string>
    <string name="activity_memory_words_txt1">抄写下你的钱包助记词</string>
    <string name="activity_memory_words_txt2">可点击右上角“English”和“中文”切换你擅记的助记词，
        助记词用于恢复钱包或重置钱包密码，将它准确的抄写到纸上，并存放在只有你知道的安全的地方</string>
    <string name="activity_memory_words_txt3">确认你的钱包助记词</string>
    <string name="activity_memory_words_txt4">请确认您的备份助记词，并按照正确顺序点击填入</string>
    <string name="activity_memory_words_next">下一步</string>
    <string name="activity_memory_words_confirm">确认</string>
    <string name="activity_create_wallet_success_title">钱包创建成功</string>
    <string name="activity_create_wallet_success_next">立即使用</string>
    <string name="activity_add_coin_title">添加资产</string>
    <string name="activity_add_erc">Etherenm系-ERC20标准</string>
    <string name="activity_news_details_title">详情</string>
    <string name="have">有</string>
    <string name="have_news_message">条新快讯</string>
    <string name="activity_select_coin_title">选择货币</string>
    <string name="activity_select_language_title">选择语言</string>
    <string name="activity_message_title">消息通知</string>
    <string name="activity_message_details_title">消息详情</string>
    <string name="activity_switch_wallet_title">切换钱包</string>
    <string name="activity_payment_zhuanzhang">转账</string>
    <string name="activity_payment_shoukuan">收款</string>
    <string name="activity_payment_copy">复制</string>
    <string name="activity_payment_dqdz">当前地址：</string>
    <string name="activity_payment_zjjy">最近交易</string>
    <string name="activity_create_man_title">新建联系人</string>
    <string name="activity_create_man_hint1">姓名</string>
    <string name="activity_create_man_hint2">收款人钱包地址</string>
    <string name="activity_create_man_hint3">手机号(非必填)</string>
    <string name="activity_create_man_hint4">邮箱(非必填)</string>
    <string name="activity_create_man_hint5">备注(非必填)</string>
    <string name="activity_edit_man_title">编辑联系人</string>
    <string name="activity_edit_man_del">删除</string>
    <string name="activity_man_title">联系人</string>
    <string name="activity_man_add">添加联系人</string>
    <string name="activity_receivables_title">收款码</string>
    <string name="activity_receivables_shoukuan_address">转入地址</string>
    <string name="activity_receivables_shoukuan_money">转入金额</string>
    <string name="activity_receivables_copy_address">复制地址</string>
    <string name="activity_receivables_save_image">保存图片</string>
    <string name="activity_trade_details_title">交易详情</string>
    <string name="activity_trade_details_zhuanzhang">转账</string>
    <string name="activity_trade_details_shoukuan_address">转入地址</string>
    <string name="activity_trade_details_out_address">转出地址</string>
    <string name="activity_trade_details_fee">矿工费</string>
    <string name="activity_trade_details_block_height">区块高度</string>
    <string name="activity_trade_details_trade_number">交易号</string>
    <string name="activity_trade_details_trade_time">交易时间</string>
    <string name="activity_trade_details_search">查看</string>
    <string name="activity_zxing_title">扫码</string>
    <string name="activity_zxing_photo">相册</string>
    <string name="activity_zxing_scan_txt">将取景框对准二维码即可扫描</string>
    <string name="activity_import_wallet_ksdr">开始导入</string>
    <string name="activity_import_wallet_hint1">请输入助记词,并使用空格分隔</string>
    <string name="activity_import_wallet_hint2">币付钱包app当前仅支持从币付app导出的钱包私钥，其它系统钱包私钥暂不支持，请谨慎导入</string>
    <string name="activity_import_wallet_success">钱包导入成功</string>
    <string name="activity_import_wallet_ljsy">立即使用</string>
    <string name="activity_transfer_pay_title">转账</string>
    <string name="activity_transfer_pay_dialog_title">确认转账</string>
    <string name="activity_transfer_pay_hint0">请输入合法的地址</string>
    <string name="activity_transfer_pay_hint1">转账金额</string>
    <string name="activity_transfer_pay_hint2">备注</string>
    <string name="activity_transfer_pay_fee">矿工费</string>
    <string name="activity_transfer_pay_slow">慢</string>
    <string name="activity_transfer_pay_common">正常</string>
    <string name="activity_transfer_pay_fast">快</string>
    <string name="activity_transfer_pay_remark">备注(仅本人可见)</string>
    <string name="activity_notice">详情</string>
    <string name="activity_trade">交易查询</string>
    <string name="activity_news_erweima">扫一扫 下载币付APP</string>
    <string name="activity_agreement">服务条款</string>
    <string name="activity_exchange_dialog_content">兑换服务由Changelly平台提供支持，实时兑换汇率取决于国内外各大交易多的相对价格。兑换服务所得币数量会根据实时价格而有所波动。每笔兑换Changelly会收取0.5%的手续费，且交易一旦上链后还需支持矿工费，请以最终收到的数额为准。</string>
    <string name="activity_exchange_dialog_ok">我知道了</string>
    <string name="agreement_detail">《服务及隐私条款》</string>
    <string name="agreement_detail_tag">点击创建钱包即表示接受币付的</string>
    <string name="agreement_detail_import_tag">点击开始导入即表示接受币付的</string>
</resources>