<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical">

    <!--标题-->
    <include layout="@layout/view_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ripple_item_link_main_selector"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etOld"
            style="@style/editext_create_wallet"
            android:layout_height="50dp"
            android:background="@null"
            android:hint="@string/activity_update_password_hint1"
            android:inputType="numberPassword"
            android:maxLength="7"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <View style="@style/line_bg_grey" />

        <EditText
            android:id="@+id/etNew"
            style="@style/editext_create_wallet"
            android:layout_height="50dp"
            android:hint="@string/activity_update_password_hint2"
            android:inputType="numberPassword"
            android:maxLength="7"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <View style="@style/line_bg_grey" />

        <EditText
            android:id="@+id/etConfirm"
            style="@style/editext_create_wallet"
            android:layout_height="50dp"
            android:hint="@string/activity_update_password_hint3"
            android:inputType="numberPassword"
            android:maxLength="7"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvChange"
        style="@style/btn_option"
        android:layout_marginTop="50dp"
        android:text="@string/activity_update_password_qrxg" />

</LinearLayout>
