<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical">

    <!--标题-->
    <include layout="@layout/view_head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_create_man"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etAddress"
                style="@style/edittext_normal"
                android:hint="@string/activity_transfer_pay_hint0"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/ivAddressScan"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@drawable/ripple_item_link_main_selector"
                android:scaleType="center"
                android:src="@mipmap/icon_sys" />
        </LinearLayout>

        <View style="@style/line_bg_grey" />

        <EditText
            android:id="@+id/etMoney"
            style="@style/edittext_normal"
            android:layout_height="50dp"
            android:hint="@string/activity_transfer_pay_hint1"
            android:inputType="numberDecimal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true" />

        <View style="@style/line_bg_grey" />

        <EditText
            android:id="@+id/etRemark"
            style="@style/edittext_normal"
            android:layout_height="50dp"
            android:hint="@string/activity_transfer_pay_hint2"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true" />

        <View style="@style/line_bg_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    style="@style/textview_tag_normal"
                    android:text="@string/activity_transfer_pay_fee"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvSeekPro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tvCoinName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </RelativeLayout>

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:maxHeight="2dp"
                android:minHeight="2dp"
                android:progressDrawable="@drawable/seekbar_progress"
                android:splitTrack="false"
                android:thumb="@drawable/seekbar_thumb" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_transfer_pay_slow"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/activity_transfer_pay_common"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/activity_transfer_pay_fast"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_small" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvNext"
        style="@style/btn_option"
        android:layout_marginTop="50dp"
        android:text="@string/activity_memory_words_next" />

</LinearLayout>
